--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,25 @@
  *= require_tree .
  *= require_self
  */
+
+.new-experiment-form{
+  border: 1px solid black;
+  text-align: center;
+  margin: auto;
+  width: 300px;
+  font-size: 1.5em;
+}
+.fields {
+  text-align: left;
+  position: relative;
+}
+
+div {
+  background-color:#BACDB0 ;
+}
+
+body {
+  background-color: #729B79;
+  color: #2E2C2F;
+  border-color
+}
