--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,11 +2,19 @@
   <div>
     <h2>Register</h2>
     <%= form_for @user, url: users_path, method: :post do |f| %>
+    <p>
       <%= f.text_field :name, placeholder: "Name"  %>
+    </p>
+    <p>
       <%= f.email_field :email, placeholder: "Email" %>
+    </p>
+    <p>
       <%= f.password_field :password, placeholder: "Password" %>
+    </p>
+    <p>
       <%= f.select :role, ["University faculty", "EA staff"] %>
-      <%= f.submit %>
+    </p>
+      <%= f.submit "Register" %>
     <% end %>
   </div>
 </div>
