--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -1,34 +1,60 @@
-<h2>Title</h2>
-<p><%= @experiment.title %></p>
+<div>
+  <div>
+    <h2>Title</h2>
+    <p><%= @experiment.title %></p>
+  </div>
 
-<h2>Summary</h2>
-<p><%= @experiment.summary %></p>
+  <div>
+    <h2>Summary</h2>
+    <p><%= @experiment.summary %></p>
+  </div>
 
-<h2>Staff Needed</h2>
-<p><%= @experiment.staff_needed %></p>
+  <div>
+    <h2>Staff Needed</h2>
+    <p><%= @experiment.staff_needed %></p>
+  </div>
 
-<h2>Contact Information</h2>
-<p><%= @experiment.contact_info %></p>
+  <div>
+    <h2>Contact Information</h2>
+    <p><%= @experiment.contact_info %></p>
+  </div>
 
-<h2>Abstract</h2>
-<p><%= @experiment.summary %></p>
+  <div>
+    <h2>Abstract</h2>
+    <p><%= @experiment.summary %></p>
+  </div>
 
-<h2>Introduction</h2>
-<p><%= @experiment.introduction %></p>
+  <div>
+    <h2>Introduction</h2>
+    <p><%= @experiment.introduction %></p>
+  </div>
 
-<h2>Hypothesis</h2>
-<p><%= @experiment.hypothesis %></p>
+  <div>
+    <h2>Hypothesis</h2>
+    <p><%= @experiment.hypothesis %></p>
+  </div>
 
-<h2>Methods</h2>
-<p><%= @experiment.methods %></p>
+  <div>
+    <h2>Methods</h2>
+    <p><%= @experiment.methods %></p>
+  </div>
 
-<h2>Observations</h2>
-<p><%= @experiment.observations %></p>
+  <div>
+    <h2>Observations</h2>
+    <p><%= @experiment.observations %></p>
+  </div>
 
-<h2>Results</h2>
-<p><%= @experiment.results %></p>
+  <div>
+    <h2>Results</h2>
+    <p><%= @experiment.results %></p>
+  </div>
 
-<h2>Conclusion</h2>
-<p><%= @experiment.conclusion %></p>
+  <div>
+    <h2>Conclusion</h2>
+    <p><%= @experiment.conclusion %></p>
+  </div>
 
-<p><%= link_to 'Back', experiments_path %></p>
+  <div>
+    <p><%= link_to 'Back', experiments_path %></p>
+  </div>
+</div>
