--- a/app/views/experiments/new.html.erb
+++ b/app/views/experiments/new.html.erb
@@ -1,3 +1,4 @@
+<span class = "nav-buffer"></span>
 <div class = "new-experiment-form">
   <ul class="errors">
     <% if @experiment %>
@@ -10,11 +11,11 @@
   <%= form_for :experiments, url: '/experiments' do |f| %>
     <p>
       <%= f.label :title %>
-      <%= f.text_field :title, placeholder: "title" %>
+      <%= f.text_field :title, placeholder: "* required field" %>
     </p>
     <p>
       <%= f.label :summary %>
-      <%= f.text_area :summary, placeholder: "summary" %>
+      <%= f.text_area :summary, placeholder: "* required field" %>
     </p>
     <p>
       <%= f.label :abstract %>
@@ -50,9 +51,10 @@
     </p>
     <p>
       <%= f.label :staff_needed %>
-      <%= f.text_field :staff_needed, placeholder: "total staff needed" %>
+      <%= f.text_field :staff_needed, placeholder: "* required field" %>
     </p>
-    <%= f.submit value: "Submit" %>
+      <%= f.submit value: "Submit" %>
+
   <% end %>
   </div>
 </div>
