Added button and logic for adding a staff member to an experiment

--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -1,4 +1,9 @@
 <div>
+  <% if @experiment.staff_needed > @experiment.staff.length %>
+    <div>
+    <%= button_to "Join Experiment Staff", experiment_path(@experiment.id), method: 'patch', data: {confirm: 'Confirm to join ' + @experiment.title} %>
+    </div>
+  <% end %>
   <div>
     <h2>Title</h2>
     <p><%= @experiment.title %></p>
