Displays log out button if logged in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   <body>
     <nav>
       <span class='logo'>EARP</span>
+      <% if session[:user_id] %>
+        <%= link_to "Logout", session_path(session[:user_id]), method: :delete %>
+      <% end %>
     </nav>
     <%= yield %>
   </body>
