--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,8 @@
 <div class="outer">
   <div>
+    <%= render partial: "partials/errors", locals: { errors: @user.errors.values.flatten } %>
+  </div>
+  <div>
     <h2>Register</h2>
     <%= form_for @user, url: users_path, method: :post do |f| %>
     <p>
