add logic to only show join experiment button to logged in user of role staff

--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <% if @experiment.staff_needed > @experiment.staff.length %>
+  <% if @experiment.staff_needed > @experiment.staff.length && current_user && current_user.role == 'staff' %>
     <div>
     <%= button_to "Join Experiment Staff", experiment_path(@experiment.id), method: 'patch', data: {confirm: 'Would you like to join this experiment?' } %>
     </div>
