styling and css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,14 +19,24 @@ nav{
   border-bottom: 2px solid #002877;
   font-family: serif;
   background-color: #FDDF33;
+  margin-bottom: 2%
 }
-
+h2 {
+  text-decoration: underline;
+}
 a {color: #002877;
   background-color: #FDDF33;
 }
 
+.experiment{
+  padding: 2%;
+  border: 2px solid #002877;
+}
 .nav-buffer {
   padding: 2%;
+}
+.content{
+  padding-left: 2%;
 }
 
 .nav-logo {text-decoration: none;}
@@ -59,9 +69,6 @@ input[type=submit]:hover {
   border: 2px solid red;
   color:red;
 }
-div {
-
-}
 
 body {
   padding: 2%;
@@ -72,10 +79,7 @@ body {
   font-family: sans-serif;
 }
 
-.experiments-container {
-  border-top: 2px solid #002877;
-  padding: 2%;
-}
+
 
 article {
   text-align: left;
@@ -83,3 +87,5 @@ article {
   margin: 2%;
   padding: 2%;
 }
+
+footer {margin-top: 2%;}
