--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -1,65 +1,92 @@
-<div>
+
+<div class = "experiment">
   <% if @experiment.staff_needed > @experiment.staff.length %>
     <div>
     <%= button_to "Join Experiment Staff", experiment_path(@experiment.id), method: 'patch', data: {confirm: 'Confirm to join ' + @experiment.title} %>
     </div>
   <% end %>
+
   <div>
-    <h2>Title</h2>
-    <p><%= @experiment.title %></p>
+    <h2 >Title: </h2>
+    <div class = "content">
+      <p><%= @experiment.title %></p>
+    </div>
+
   </div>
 
   <div>
-    <h2>Summary</h2>
+    <h2>Summary: </h2>
+    <div class = "content">
     <p><%= @experiment.summary %></p>
+    </div>
   </div>
 
   <div>
-    <h2>Staff Needed</h2>
+    <h2>Staff Needed: </h2>
+    <div class = "content">
     <p><%= @experiment.staff_needed %></p>
+    </div>
   </div>
 
   <div>
-    <h2>Contact Information</h2>
+    <h2>Contact Information: </h2>
+    <div class = "content">
     <p><%= @experiment.contact_info %></p>
+    </div>
   </div>
 
   <div>
-    <h2>Abstract</h2>
+    <h2>Abstract: </h2>
+    <div class = "content">
     <p><%= @experiment.summary %></p>
+    </div>
   </div>
 
   <div>
-    <h2>Introduction</h2>
+    <h2>Introduction: </h2>
+    <div class = "content">
     <p><%= @experiment.introduction %></p>
+    </div>
   </div>
 
   <div>
-    <h2>Hypothesis</h2>
+    <h2>Hypothesis: </h2>
+    <div class = "content">
     <p><%= @experiment.hypothesis %></p>
+    </div>
   </div>
 
   <div>
-    <h2>Methods</h2>
+    <h2>Methods: </h2>
+    <div class = "content">
     <p><%= @experiment.methods %></p>
+    </div>
   </div>
 
   <div>
-    <h2>Observations</h2>
+    <h2>Observations: </h2>
+    <div class = "content">
     <p><%= @experiment.observations %></p>
+    </div>
   </div>
 
   <div>
-    <h2>Results</h2>
+    <h2>Results: </h2>
+    <div class = "content">
     <p><%= @experiment.results %></p>
+    </div>
   </div>
 
   <div>
-    <h2>Conclusion</h2>
+    <h2>Conclusion: </h2>
+    <div class = "content">
     <p><%= @experiment.conclusion %></p>
+    </div>
   </div>
 
   <div>
-    <p><%= link_to 'Back', experiments_path %></p>
+    <%= link_to "Back", experiments_path%>
   </div>
+
+
 </div>
