--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -3,6 +3,8 @@
     <div>
       <%= button_to "Join Experiment Staff", experiment_path(@experiment.id), method: 'patch', data: {confirm: 'Would you like to join this experiment?' } %>
     </div>
+    <% else %>
+      <%= button_tag "Experiment is full", '#'%>
   <% end %>
   <div>
     <h2>Title</h2>
