--- a/app/views/experiments/new.html.erb
+++ b/app/views/experiments/new.html.erb
@@ -1,6 +1,6 @@
 
-<div class = "new-experiment-form">
-  <ul class="errors">
+<div class = "new-experiment-form outer">
+  <ul class="errors inner">
     <% if @experiment %>
       <% @experiment.errors.full_messages.each do |error| %>
         <li><%= error %></li>
