--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -1,11 +1,9 @@
 <div>
-  <% if @experiment.staff_needed > @experiment.staff.length && current_user && current_user.role == 'staff' %>
+  <!-- <% if @experiment.staff_needed > @experiment.staff.length && current_user && current_user.role == 'staff' && !@experiment.staff.include?(current_user)%>
     <div>
       <%= button_to "Join Experiment Staff", experiment_path(@experiment.id), method: 'patch', data: {confirm: 'Would you like to join this experiment?' } %>
     </div>
-    <% else %>
-      <%= button_tag "Experiment is full", '#'%>
-  <% end %>
+  <% end %> -->
   <div>
     <h2>Title</h2>
     <p><%= @experiment.title %></p>
@@ -61,7 +59,13 @@
     <p><%= @experiment.conclusion %></p>
   </div>
 
-  <div>
-    <p><%= link_to 'Back', experiments_path %></p>
-  </div>
+
+  <footer>
+    <div>
+      <p><%= link_to 'Back', experiments_path %></p>
+    </div>
+      <div>
+        <%= link_to "Top", "#"%>
+    </div>
+  </footer>
 </div>
