--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -24,41 +24,44 @@
     <p><%= @experiment.contact_info %></p>
   </div>
 
-  <div>
-    <h2>Abstract</h2>
-    <p><%= @experiment.summary %></p>
-  </div>
+  <button type="button">More Information</button>
 
-  <div>
-    <h2>Introduction</h2>
-    <p><%= @experiment.introduction %></p>
-  </div>
+  <div class='reveal-down'>
+    <div>
+      <h2>Abstract</h2>
+      <p><%= @experiment.summary %></p>
+    </div>
 
-  <div>
-    <h2>Hypothesis</h2>
-    <p><%= @experiment.hypothesis %></p>
-  </div>
+    <div>
+      <h2>Introduction</h2>
+      <p><%= @experiment.introduction %></p>
+    </div>
 
-  <div>
-    <h2>Methods</h2>
-    <p><%= @experiment.methods %></p>
-  </div>
+    <div>
+      <h2>Hypothesis</h2>
+      <p><%= @experiment.hypothesis %></p>
+    </div>
 
-  <div>
-    <h2>Observations</h2>
-    <p><%= @experiment.observations %></p>
-  </div>
+    <div>
+      <h2>Methods</h2>
+      <p><%= @experiment.methods %></p>
+    </div>
 
-  <div>
-    <h2>Results</h2>
-    <p><%= @experiment.results %></p>
-  </div>
+    <div>
+      <h2>Observations</h2>
+      <p><%= @experiment.observations %></p>
+    </div>
 
-  <div>
-    <h2>Conclusion</h2>
-    <p><%= @experiment.conclusion %></p>
-  </div>
+    <div>
+      <h2>Results</h2>
+      <p><%= @experiment.results %></p>
+    </div>
 
+    <div>
+      <h2>Conclusion</h2>
+      <p><%= @experiment.conclusion %></p>
+    </div>
+  </div>
 
   <footer>
     <div>
