Create more/hide button for post information

--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -24,7 +24,7 @@
     <p><%= @experiment.contact_info %></p>
   </div>
 
-  <button type="button">More Information</button>
+  <button id='reveal-info' type="button">More Information</button>
 
   <div class='reveal-down'>
     <div>
