Adds feature tests for log in

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -70,7 +70,7 @@ div {
 body {
   padding: 2%;
   color: #002877;
-  border-color
+  /*border-color*/
   width: 80%;
   margin: auto;
   font-family: sans-serif;
