--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -1,9 +1,5 @@
 <div>
-  <% if @experiment.staff_needed > @experiment.staff.length && current_user && current_user.role == 'staff' && !@experiment.staff.include?(current_user)%>
-    <div>
-      <%= button_to "Join Experiment Staff", experiment_path(@experiment.id), method: 'patch', data: {confirm: 'Would you like to join this experiment?' } %>
-    </div>
-  <% end %>
+<%= render 'join_experiment' %>
   <div>
     <h2>Title</h2>
     <p><%= @experiment.title %></p>
