--- a/app/views/experiments/_join_experiment.erb
+++ b/app/views/experiments/_join_experiment.erb
@@ -1,6 +1,9 @@
-<% if @experiment.staff_needed > @experiment.staff.length && current_user && current_user.role == 'staff' && !@experiment.staff.include?(current_user)%>
+<%= javascript_include_tag "application" %>
+
+<% if @experiment.staff_needed > 0 && current_user && current_user.role == 'staff' && !@experiment.staff.include?(current_user)%>
+  <br>
   <div>
-    <%= button_to "Join Experiment Staff", experiment_path(@experiment.id), method: 'patch', data: {confirm: 'Would you like to join this experiment?' }, remote: true %>
+    <%= button_to "Join Experiment Staff", experiment_path(@experiment.id), method: :patch, class: 'join-experiment-btn', data: {confirm: 'Would you like to join this experiment?' } %>
   </div>
 <% elsif @experiment.staff_needed > @experiment.staff.length %>
   <p class='join-experiment-notice'>You have already joined this experiment </p>
