--- a/app/views/experiments/index.html.erb
+++ b/app/views/experiments/index.html.erb
@@ -1,11 +1,11 @@
-<div class="index-body">
-  <div class="add-experiment">
-    <%= button_to "Add Experiment", new_experiment_path, method: "get" %>
+<div class="index-body content">
+  <div class="add-experiment content">
+    <%= button_to "Add Experiment", new_experiment_path, method: "get", class: "content" %>
   </div>
   <div class="index-header">
     <h2>Experiment Board</h2>
   </div>
-  <div class="experiments-container">
+  <div class="experiments-container content">
     <% @experiments.each do |experiment| %>
       <article class="individual-experiment">
         <span><%= link_to experiment.title, experiment_path(experiment.id) %></span>
