Make experiments show page mobile first

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -110,9 +110,21 @@ article {
 
 .experiment{
   border: 2px solid #002877;
+  max-width: 90%;
+  margin: auto;
+  min-height: 600px;
 }
 
 .content{
+  margin: auto;
+  padding: 10px;
+}
+
+#reveal-info {
+  border: 2px solid #002877;
+  padding: 3%;
+  min-width: 100%;
+  font-size: 3em;
   margin: auto;
 }
 
