--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -132,15 +132,28 @@ a:hover {
   color:red
 }
 
-.new-experiment-form {
+/*.new-experiment-form {
   border: 2px solid #002877;
   text-align: center;
   margin: auto;
   width: 300px;
   font-size: 1.5em;
-}
+}*/
+
 .fields {
-  position: relative;
+  min-width: 95%;
+  padding: 15px;
+}
+
+label {
+  font-size: 4em;
+}
+
+textarea {
+  min-width: 80%;
+  min-height: 100px;
+  font-size: 3em;
+  border: 2px solid #002877;
 }
 
 .index-body{
@@ -156,6 +169,7 @@ input[type=submit] {
   max-width: 90%;
   border: 2px solid #002877;
   background-color: inherit;
+  padding-bottom: 15px;
 }
 
 input[type=submit]:hover {
