--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,9 +16,11 @@
 
 body {
   width: 100%;
+  max-width: 1100px;
+  min-width: 500px;
   min-height: 1000px;
   font-family: sans-serif;
-  margin: 0;
+  margin: auto;
 }
 
 nav {
