--- a/app/views/experiments/_show.html.erb
+++ b/app/views/experiments/_show.html.erb
@@ -1,6 +1,5 @@
 
-<div id="landing-ajax">
-<!-- above div temporarily named for functionality pre full ajaxify of site -->
+<div>
 
 <div class="join-experiment-container">
   <%= render "join_experiment" %>
