--- a/app/views/experiments/new.html.erb
+++ b/app/views/experiments/new.html.erb
@@ -53,7 +53,7 @@
       <%= f.label :staff_needed %>
       <%= f.text_field :staff_needed, placeholder: "* required field" %>
     </p>
-      <%= f.submit value: "Submit" %>
+      <%= f.submit "Submit" %>
 
   <% end %>
   </div>
