--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -6,7 +6,7 @@
   <%= render "join_experiment" %>
 </div>
 
-<div class = "experiment">
+<div id= "<%=@experiment.id%>" class = "experiment">
 
   <div>
     <h2 >Title: </h2>
