--- a/app/views/experiments/_show.html.erb
+++ b/app/views/experiments/_show.html.erb
@@ -49,7 +49,7 @@
     <div>
       <h2>Abstract: </h2>
       <div class = "content">
-      <p><%= @experiment.summary %></p>
+      <p><%= @experiment.abstract %></p>
       </div>
     </div>
 
