--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -122,6 +122,19 @@ article {
   padding-left: 2.5%;
 }
 
+.join-experiment-notice {
+  text-align: center;
+  font-size: 1.5em;
+}
+
+.index-header {
+  text-align: center;
+}
+
+.join {
+  text-align: center;
+}
+
 #reveal-info {
   border: 2px solid #002877;
   padding: 3%;
