working add comment route

--- a/app/views/experiments/show.html.erb
+++ b/app/views/experiments/show.html.erb
@@ -96,6 +96,7 @@
     </div>
   </div>
   <button id="reveal-info" type="button">More Information</button>
+  <%= render "comments/new" %>
   <footer>
       <p><%= link_to "Back", experiments_path %></p>
   </footer>
