--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -110,6 +110,10 @@ article {
   margin-bottom: 20px;
 }
 
+footer {
+  padding-left: 2%;
+}
+
 .experiment{
   border: 2px solid #002877;
   max-width: 90%;
