--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -191,3 +191,60 @@ article {
 .reg-link {
   font-size: 4em;
 }
+
+.tab-content {
+    display: none;
+}
+.tabs {
+    float: left;
+    border-bottom: 1px solid #ccc;
+    width: 100%;
+    margin-bottom: 16px;
+    list-style: none;
+}
+.tabs li {
+    width: 43%;
+    float: left;
+    margin-right: 16px;
+    padding: 10px 15px;
+    height: 60px;
+    line-height: 30px;
+}
+.tabs li a {
+    font-size: 3em;
+    background-color: white;
+    color: #666;
+    text-decoration: none;
+}
+
+.tabs li.active {
+    margin-bottom: -1px;
+    height: 31px;
+    padding: 9px 14px;
+}
+
+.tabs li.active a {
+    color: black;
+    text-decoration: none;
+    border-bottom: none;
+}
+
+.container {
+    margin: 20px auto;
+}
+
+div.active {
+  display: block;
+}
+
+.comment-list {
+  text-align: left;
+}
+
+.comment-list li {
+  list-style: none;
+}
+
+.comment-item {
+  padding: 10px;
+}
